[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/PlayerUIManager.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Characters/Pilots/Alpha Pilot.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Interface/PortraitOutline.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Interface/BlankSquare.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Nuts and Bolts.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Fonts/Font 5.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Graphics/Interface/Emotes/EmotePack.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Menus/ButtonPrompt.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=6]
size = 131
outline_size = 7
outline_color = Color( 0.14902, 0.14902, 0.14902, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../EmoteSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../EmoteSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6.35481, 73.0292 ), Vector2( -6.35481, 97.0292 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../EmoteSprite:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 48, 16, 16 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 19, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.411765, 0.411765, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../EmoteSprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 16, 64, 16, 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../EmoteSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../EmoteSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6.35481, 73.0292 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../EmoteSprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 16, 64, 16, 16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../EmoteSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../EmoteSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6.35481, 97.0292 ) ]
}

[node name="PlayerUI" type="Control"]
margin_left = 149.76
margin_top = 745.624
margin_right = 189.76
margin_bottom = 785.624
rect_scale = Vector2( 2, 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
health_bar_colors = {
"Critical": Color( 0.301961, 0, 0, 1 ),
"High": Color( 0.439216, 1, 0.235294, 1 ),
"Low": Color( 0.627451, 0.270588, 0.188235, 1 ),
"Medium": Color( 0.827451, 0.517647, 0.219608, 1 )
}
health_bar_percents = {
"Critical": 30,
"High": 100,
"Low": 40,
"Medium": 75
}

[node name="Healthbar" type="Control" parent="."]
margin_left = 19.5998
margin_top = 137.198
margin_right = 59.5998
margin_bottom = 177.198
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="TextureProgress" parent="Healthbar"]
margin_left = -78.0
margin_top = -55.5
margin_right = -46.0
margin_bottom = -23.5
rect_scale = Vector2( 2.281, 2.312 )
value = 55.0
texture_progress = ExtResource( 4 )
fill_mode = 3
tint_progress = Color( 1, 0.686275, 0.384314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerIDLabel" type="Label" parent="Portrait"]
margin_left = -60.0
margin_top = 52.0
margin_right = 307.0
margin_bottom = 215.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 6 )
text = "P Num"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PilotSprite" type="Sprite" parent="Portrait"]
modulate = Color( 1, 0.411765, 0.411765, 1 )
position = Vector2( -19.5232, 110.629 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 6
vframes = 4
frame = 18
region_rect = Rect2( 5, 7, 14, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Portrait/PilotSprite"]
autoplay = "Idle"
anims/Dead = SubResource( 8 )
anims/Hurt = SubResource( 4 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 7 )

[node name="PortraitOutline" type="Sprite" parent="Portrait"]
position = Vector2( -21.842, 118.533 )
scale = Vector2( 2.45371, 2.45371 )
texture = ExtResource( 3 )

[node name="EmoteSprite" type="Sprite" parent="Portrait"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -6.35481, 97.0292 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 16, 64, 16, 16 )

[node name="Currency" type="Control" parent="."]
margin_left = 17.3529
margin_top = 82.76
margin_right = 57.3529
margin_bottom = 122.76
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="Currency"]
position = Vector2( 19.981, 18.6113 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 66, 34, 18, 17 )

[node name="AmountLabel" type="Label" parent="Currency"]
margin_left = 41.2671
margin_top = 6.42798
margin_right = 551.267
margin_bottom = 169.428
rect_scale = Vector2( 0.2, 0.2 )
custom_colors/font_color = Color( 1, 0.931915, 0.621094, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Workshop" parent="." instance=ExtResource( 8 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = 28.12
margin_top = 127.188
margin_right = 68.12
margin_bottom = 167.188
rect_scale = Vector2( 0.8, 0.8 )
_input = "UpgradeMenu"
label_text = "Workshop"
label_position = Vector2( 36.021, 5.34 )
label_alignment = "Left"

[connection signal="Button_Pressed" from="Workshop" to="Workshop" method="toggle_label" binds= [ "Workshop", "Close Workshop" ]]
